--- a/pom.xml
+++ b/pom.xml
@@ -90,30 +90,26 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			<!-- <plugin> -->
-			<!-- <groupId>org.springframework.boot</groupId> -->
-			<!-- <artifactId>spring-boot-maven-plugin</artifactId> -->
-			<!-- </plugin> -->
-			<!-- <plugin> -->
-			<!-- <groupId>com.spotify</groupId> -->
-			<!-- <artifactId>dockerfile-maven-plugin</artifactId> -->
-			<!-- <version>1.4.3</version> -->
-			<!-- <executions> -->
-			<!-- <execution> -->
-			<!-- <id>default</id> -->
-			<!-- <goals> -->
-			<!-- <goal>build</goal> -->
-			<!-- </goals> -->
-			<!-- </execution> -->
-			<!-- </executions> -->
-			<!-- <configuration> -->
-			<!-- <repository>${project.artifactId}</repository> -->
-			<!-- <tag>${project.version}</tag> -->
-			<!-- <buildArgs> -->
-			<!-- <JAR_FILE>${project.build.finalName}.jar</JAR_FILE> -->
-			<!-- </buildArgs> -->
-			<!-- </configuration> -->
-			<!-- </plugin> -->
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>dockerfile-maven-plugin</artifactId>
+				<version>1.4.3</version>
+				<executions>
+					<execution>
+						<id>default</id>
+						<goals>
+							<goal>build</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<repository>${project.artifactId}</repository>
+					<tag>${project.version}</tag>
+					<buildArgs>
+						<JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
+					</buildArgs>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
